2008-12-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* README: Add gnus-kill-to-score.el.

	* gnus-kill-to-score.el: New file from
	<http://heim.ifi.uio.no/~larsi/ding-various/gnus-kill-to-score.el>.

2008-11-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* smtpmail.el (smtpmail-open-stream): Use
	`starttls-any-program-available'.  Auto-load starttls.el for it.

2008-06-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sendmail.el (mail-interactive): Change default.

2008-06-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* README: Remove entry about nnir.el.

	* nnir.el: Move to ../lisp.

2008-05-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el (uncompface): Make buffer, in which uncompface program
	runs, unibyte.

2008-05-19  Teodor Zlatanov  <tzz@lifelogs.com>

	* mail/smtpmail.el: Add autoload for `auth-source-user-or-password'.
	(smtpmail-try-auth-methods): Use it.

2008-05-15  Andreas Schwab  <schwab@suse.de>

	* nnir.el (nnir-add-result): Properly substitute the parameters.

2008-05-08  Reiner Steib  <reiner.steib@gmx.de>

	* nnir.el (nnir-run-waissearch, nnir-run-swish++): Remove unused local
	variable.
	(nnimap-server-buffer): Silence compiler warning.

2008-04-24  Christoph Conrad <christoph.conrad@gmx.de>

	* nnir.el: Fix byte compiler warnings.
	(nnir-retrieve-headers): Don't set let-bound vars to nil.  Replace
	mapcar called for effect with mapc.
	(nnir-compose-result): Bind `group'.  Don't set let-bound vars to nil.
	(nnir-run-imap, nnir-artlist-groups): Replace mapcar called for effect
	with mapc.
	(nnir-run-swish++, nnir-run-swish-e, nnir-run-namazu): Don't set
	let-bound vars to nil.

2008-04-21  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnir.el: Don't require cl at runtime.  Require gnus-util at runtime.
	Autoload nnimap and imap functions.

2008-04-21  Justus Piater  <Justus-bulk@Piater.name>

	* nnir.el (nnir-compose-result): Use `gnus-replace-in-string' instead
	of `substitute' to avoid using cl at runtime.
