@@ -7625,7 +7625,9 @@ If BACKWARD, the previous article is selected instead of the next."
    (t
     (unless (gnus-ephemeral-group-p gnus-newsgroup-name)
       (gnus-summary-jump-to-group gnus-newsgroup-name))
-    (let ((cmd last-command-char)
+    (let ((cmd (if (featurep 'xemacs)
+		   last-command-char
+		 last-command-event))
 	  (point
 	   (with-current-buffer gnus-group-buffer
 	     (point)))
