@@ -1,3 +1,7 @@
+2009-01-23  Glenn Morris  <rgm@gnu.org>
+
+	* sendmail.el (mail-bury): Revert previous change now pmail is no more.
+
 2008-12-26  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* README: Add gnus-kill-to-score.el.
@@ -604,7 +608,7 @@ g	* nnir.el: Removed support for non free backends glimpse and excite.
 	(gpg-encrypt): Add passphrase as a parameter.
 
     Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005, 2006,
-    2007, 2008 Free Software Foundation, Inc.
+    2007, 2008, 2009 Free Software Foundation, Inc.
 
   This file is part of GNU Emacs.
 
